[package]
name = "kamikaze_joe"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamikaze_joe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
getrandom = { version = "0.2.9", features = ["custom"] }
session-keys = { version = "2.0.3", features = ["no-entrypoint"] }
soar-cpi = "0.1.4"
solana-program = "^1.16"
solana-security-txt = "1.1.1"
winnow="=0.4.1"
